// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Api Keys createApiKey (no subaccount) 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "grants": Array [
          "metrics/read",
          "webhooks/modify",
        ],
        "label": "test label",
        "valid_ips": Array [
          "1.1.1.1",
          "2.2.2.2",
        ],
      },
      "headers": Object {},
      "method": "POST",
      "url": "/api-keys",
    },
    "type": "CREATE_API_KEY",
  },
]
`;

exports[`Action Creator: Api Keys createApiKey (with subaccount) 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "grants": Array [
          "metrics/read",
          "webhooks/modify",
        ],
        "label": "test label with subaccount",
        "valid_ips": Array [
          "1.1.1.1",
          "2.2.2.2",
        ],
      },
      "headers": Object {
        "x-msys-subaccount": 1234,
      },
      "method": "POST",
      "url": "/api-keys",
    },
    "type": "CREATE_API_KEY",
  },
]
`;

exports[`Action Creator: Api Keys deleteApiKey (no subaccount) 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "DELETE",
      "url": "/api-keys/ABC123ID",
    },
    "type": "DELETE_API_KEY",
  },
]
`;

exports[`Action Creator: Api Keys deleteApiKey (with subaccount) 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {
        "x-msys-subaccount": 1234,
      },
      "method": "DELETE",
      "url": "/api-keys/ABC123ID",
    },
    "type": "DELETE_API_KEY",
  },
]
`;

exports[`Action Creator: Api Keys getApiKey (no subaccount) 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "url": "/api-keys/ABC123ID",
    },
    "type": "GET_API_KEY",
  },
]
`;

exports[`Action Creator: Api Keys getApiKey (with subaccount) 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {
        "x-msys-subaccount": 1234,
      },
      "method": "GET",
      "url": "/api-keys/ABC123ID",
    },
    "type": "GET_API_KEY",
  },
]
`;

exports[`Action Creator: Api Keys hideNewApiKey 1`] = `
Array [
  Object {
    "type": "HIDE_NEW_API_KEY",
  },
]
`;

exports[`Action Creator: Api Keys listApiKeys (no subaccount specified) 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "showErrorAlert": false,
      "url": "/api-keys",
    },
    "type": "LIST_API_KEYS",
  },
]
`;

exports[`Action Creator: Api Keys listApiKeys (with subaccount specified) 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {
        "x-msys-subaccount": 1234,
      },
      "method": "GET",
      "showErrorAlert": false,
      "url": "/api-keys",
    },
    "type": "LIST_API_KEYS",
  },
]
`;

exports[`Action Creator: Api Keys listGrants 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "url": "/authenticate/grants",
    },
    "type": "LIST_GRANTS",
  },
]
`;

exports[`Action Creator: Api Keys listSubaccountGrants 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {
        "role": "subaccount",
      },
      "url": "/authenticate/grants",
    },
    "type": "LIST_SUBACCOUNT_GRANTS",
  },
]
`;

exports[`Action Creator: Api Keys updateApiKey (no subaccount) 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "grants": Array [
          "metrics/read",
          "webhooks/modify",
        ],
        "label": "test label",
        "valid_ips": Array [
          "1.1.1.1",
          "2.2.2.2",
        ],
      },
      "headers": Object {},
      "method": "PUT",
      "url": "/api-keys/ABC123ID",
    },
    "type": "UPDATE_API_KEY",
  },
]
`;

exports[`Action Creator: Api Keys updateApiKey (with subaccount) 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "grants": Array [
          "metrics/read",
          "webhooks/modify",
        ],
        "label": "test label with subaccount",
        "valid_ips": Array [
          "1.1.1.1",
          "2.2.2.2",
        ],
      },
      "headers": Object {
        "x-msys-subaccount": 1234,
      },
      "method": "PUT",
      "url": "/api-keys/ABC123ID",
    },
    "type": "UPDATE_API_KEY",
  },
]
`;
